--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-My GitHub Page
+<html>
+<head>
+  <title>Concordion Timestamp Formatter Extension</title>
+</head>
+<body>
+<h1>Concordion Timestamp Formatter Extension</h1>
+<ul>
+    <li><a href="api/index.html">API</a></li>
+    <li><a href="spec/TimestampFormatter.html">Specification</a></li>
+</ul>
+</body>
+</html>
